# Home_Assistant_Hub

Prototype_Home_Assistant_Hub/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  prototype_home_assistant_hub.ui  resizableframe.cpp  resizableframe.h  ui_prototype_home_assistant_hub.h
Prototype_Home_Assistant_Hub/include/: mainwindow.h  resizableframe.h
Prototype_Home_Assistant_Hub/include/gridItemMover/: gridItemMover.h
Prototype_Home_Assistant_Hub/include/ui/: ui_prototype_home_assistant_hub.h
Prototype_Home_Assistant_Hub/src/: main.cpp  mainwindow.cpp  resizableframe.cpp
Prototype_Home_Assistant_Hub/src/gridItemMover/: gridItemMover.cpp
Prototype_Home_Assistant_Hub/ui/: prototype_home_assistant_hub.ui
SmartDashboard/: CMakeLists.txt
SmartDashboard/include/: smartdashboard_core.h
SmartDashboard/src/: main.cpp  smartdashboard_core.cpp
SmartDashboard/ui/: smartdashboard_core.ui
plugins/Time_And_Date_Plugin/: CMakeLists.txt
plugins/Time_And_Date_Plugin/include/: time_and_date_main.h
plugins/Time_And_Date_Plugin/src/: main.cpp  time_and_date_main.cpp
plugins/Time_And_Date_Plugin/ui/: time_and_date_main.ui
